Add Polish translation, from Jakub Bogusz <qboosh@pld-linux.org>.

--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 GNU SASL THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003 Simon Josefsson
+Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
 Libgsasl uses libntlm by Grant Edwards maintained by Simon Josefsson;
@@ -9,6 +9,7 @@ borrowed from Libgcrypt.
 
 Bug reports, patches and/or suggestions were also received from:
 
+Jakub Bogusz
 Lars Engebretsen
 Marc Mutz
 Andorz Nilsson
