--- a/lib/po/sv.po
+++ b/lib/po/sv.po
@@ -1,11 +1,11 @@
 # Swedish translations for libgsasl package
 # Svenska översättningar för paket libgsasl.
-# Copyright (C) 2002 Simon Josefsson.
+# Copyright (C) 2002, 2004 Simon Josefsson.
 # Simon Josefsson <simon@josefsson.org>, 2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU libgsasl 0.0\n"
+"Project-Id-Version: GNU libgsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
 "POT-Creation-Date: 2004-01-22 20:06+0100\n"
 "PO-Revision-Date: 2002-10-05 19:32+0200\n"
@@ -271,98 +271,3 @@ msgstr ""
 #: lib/error.c:310
 msgid "Libgsasl unknown error"
 msgstr "Okänt fel i libgsasl"
-
-#: src/gsasl.c:106
-#, fuzzy, c-format
-msgid "Chose SASL mechanisms:\n"
-msgstr "Okänd SASL mekanism"
-
-#: src/gsasl.c:114
-#, c-format
-msgid "Input SASL mechanism supported by server:\n"
-msgstr ""
-
-#: src/gsasl.c:133
-#, fuzzy, c-format
-msgid "Using mechanism:\n"
-msgstr "Okänd SASL mekanism"
-
-#: src/gsasl.c:150
-#, c-format
-msgid "Output from client:\n"
-msgstr ""
-
-#: src/gsasl.c:152
-#, c-format
-msgid "Output from server:\n"
-msgstr ""
-
-#: src/gsasl.c:302 src/gsasl.c:347
-#, fuzzy, c-format
-msgid "GSASL error (%d): %s\n"
-msgstr "Okänt fel i libgsasl"
-
-#: src/gsasl.c:353
-#, c-format
-msgid "This %s supports the following mechanisms:\n"
-msgstr ""
-
-#: src/gsasl.c:355 src/gsasl.c:428
-msgid "client"
-msgstr ""
-
-#: src/gsasl.c:355 src/gsasl.c:428
-msgid "server"
-msgstr ""
-
-#: src/gsasl.c:379
-#, c-format
-msgid "Cannot find mechanism...\n"
-msgstr ""
-
-#: src/gsasl.c:397 src/gsasl.c:437 src/gsasl.c:532
-#, fuzzy, c-format
-msgid "Libgsasl error (%d): %s\n"
-msgstr "Okänt fel i libgsasl"
-
-#: src/gsasl.c:426
-#, c-format
-msgid "Enter base64 authentication data from %s (press RET if none):\n"
-msgstr ""
-
-#: src/gsasl.c:448
-#, c-format
-msgid "Client authentication finished (server trusted)...\n"
-msgstr ""
-
-#: src/gsasl.c:451
-#, c-format
-msgid "Server authentication finished (client trusted)...\n"
-msgstr ""
-
-#: src/gsasl.c:466
-#, c-format
-msgid "Enter application data (EOF to finish):\n"
-msgstr ""
-
-#: src/gsasl.c:505
-#, c-format
-msgid "Base64 encoded application data to send:\n"
-msgstr ""
-
-#: src/gsasl.c:539
-#, c-format
-msgid "Session finished...\n"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Password for authentication."
-#~ msgstr "Fel vid autentisering av användare"
-
-#, fuzzy
-#~ msgid "Libgsasl wants to use:\n"
-#~ msgstr "Libgsasl lyckades"
-
-#, fuzzy
-#~ msgid "GSSAPI error in SASL library"
-#~ msgstr "Fel från gcrypt i SASL-biblioteket"
