--- a/lib/THANKS
+++ b/lib/THANKS
@@ -2,6 +2,10 @@ GNU SASL LIBRARY THANKS -- Acknowledgements.
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
+GNU SASL uses libntlm by Grant Edwards maintained by Simon Josefsson;
+libgssapi by MIT/Heimdal; libgcrypt by Werner Koch; GSS, Libidn, and
+Shishi by Simon Josefsson.
+
 Bug reports, patches and/or suggestions were also received from:
 
 Jakub Bogusz
