--- a/po/sv.po
+++ b/po/sv.po
@@ -1,14 +1,14 @@
-# Swedish translations for libgsasl package
-# Svenska översättningar för paket libgsasl.
-# Copyright (C) 2002 Simon Josefsson.
+# Swedish translations for gsasl package
+# Svenska översättningar för paket gsasl.
+# Copyright (C) 2002, 2004 Simon Josefsson.
 # Simon Josefsson <simon@josefsson.org>, 2002.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU libgsasl 0.0\n"
+"Project-Id-Version: GNU gsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
 "POT-Creation-Date: 2004-01-22 20:06+0100\n"
-"PO-Revision-Date: 2002-10-05 19:32+0200\n"
+"PO-Revision-Date: 2004-04-16 00:42+0200\n"
 "Last-Translator: Simon Josefsson <simon@josefsson.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,353 +16,85 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: lib/error.c:48
-msgid "Libgsasl success"
-msgstr "Libgsasl lyckades"
-
-#: lib/error.c:52
-#, fuzzy
-msgid "SASL mechanisms needs more data"
-msgstr "SASL mekanismen behöver mer data"
-
-#: lib/error.c:56
-#, fuzzy
-msgid "Unknown SASL mechanism"
-msgstr "Okänd SASL mekanism"
-
-#: lib/error.c:60
-#, fuzzy
-msgid "SASL mechanism called too many times"
-msgstr "SASL mekanism anropad för många gånger"
-
-#: lib/error.c:64
-#, fuzzy
-msgid "SASL function need larger buffer (internal error)"
-msgstr "SASL funktion behöver större buffer (internt fel)"
-
-#: lib/error.c:68
-#, fuzzy
-msgid "Could not open file in SASL library"
-msgstr "Minnesallokeringsfel i SASL-biblioteket"
-
-#: lib/error.c:72
-#, fuzzy
-msgid "Could not close file in SASL library"
-msgstr "Minnesallokeringsfel i SASL-biblioteket"
-
-#: lib/error.c:76
-msgid "Memory allocation error in SASL library"
-msgstr "Minnesallokeringsfel i SASL-biblioteket"
-
-#: lib/error.c:80
-msgid "Base 64 coding error in SASL library"
-msgstr "Bas 64 kodningsfel i SASL-biblioteket"
-
-#: lib/error.c:84
-msgid "Gcrypt error in SASL library"
-msgstr "Fel från gcrypt i SASL-biblioteket"
-
-#: lib/error.c:90
-msgid ""
-"GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
-"library.  This is a serious internal error."
-msgstr ""
-
-#: lib/error.c:98
-msgid ""
-"GSSAPI library could not understand a peer name in gss_import_name() in SASL "
-"library.  This may be due to incorrect user supplied data."
-msgstr ""
-
-#: lib/error.c:106
-msgid ""
-"GSSAPI error in client while negotiating security context in "
-"gss_init_sec_context() in SASL library.  This is most likely due "
-"insufficient credentials or malicious interactions."
-msgstr ""
-
-#: lib/error.c:114
-msgid ""
-"GSSAPI error in server while negotiating security context in "
-"gss_init_sec_context() in SASL library.  This is most likely due "
-"insufficient credentials or malicious interactions."
-msgstr ""
-
-#: lib/error.c:122
-msgid ""
-"GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
-"library.  This is most likely due to data corruption."
-msgstr ""
-
-#: lib/error.c:130
-msgid ""
-"GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
-msgstr ""
-
-#: lib/error.c:137
-msgid ""
-"GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
-"This is most likely due to not having the proper Kerberos key available in /"
-"etc/krb5.keytab on the server."
-msgstr ""
-
-#: lib/error.c:146
-msgid ""
-"GSSAPI error creating a display name denoting the client in gss_display_name"
-"() in SASL library.  This is probably because the client suplied bad data."
-msgstr ""
-
-#: lib/error.c:154
-msgid ""
-"Other entity requested integrity or confidentiality protection in GSSAPI "
-"mechanism but this is currently not implemented."
-msgstr ""
-
-#: lib/error.c:161
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:168
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_password() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:175
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_passcode() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:182
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:189
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_authorization_id() callback "
-"(application error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:196
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_authentication_id() callback "
-"(application error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:203
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_client_callback_service() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:210
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_validate() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:217
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:224
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_digest_md5() callback "
-"(application error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:231
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:238
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_external() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:245
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_realm() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:252
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_securid() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:259
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_service() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:266
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:271
-#, fuzzy
-msgid ""
-"SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
-"error)"
-msgstr "SASL mekanismen behöver mer data (applikationsfel)"
-
-#: lib/error.c:276
-msgid "SASL mechanism could not parse input"
-msgstr "SASL mekanism kunde inte tolka indata"
-
-#: lib/error.c:280
-msgid "Error authentication user"
-msgstr "Fel vid autentisering av användare"
-
-#: lib/error.c:284
-msgid "Cannot get internal library handle (library error)"
-msgstr "Kan inte hämta internt bibliotekskontext (biblioteksfel)"
-
-#: lib/error.c:288
-msgid "Integrity error in application payload"
-msgstr ""
-
-#: lib/error.c:292
-msgid "No more realms available (non-fatal)"
-msgstr ""
-
-#: lib/error.c:296
-msgid "Client-side functionality not available in library (application error)"
-msgstr ""
-
-#: lib/error.c:301
-msgid "Server-side functionality not available in library (application error)"
-msgstr ""
-
-#: lib/error.c:306
-msgid "The provided library handle was invalid (application error)"
-msgstr ""
-
-#: lib/error.c:310
-msgid "Libgsasl unknown error"
-msgstr "Okänt fel i libgsasl"
-
 #: src/gsasl.c:106
-#, fuzzy, c-format
+#, c-format
 msgid "Chose SASL mechanisms:\n"
-msgstr "Okänd SASL mekanism"
+msgstr "Välj SASL-mekanismer:\n"
 
 #: src/gsasl.c:114
 #, c-format
 msgid "Input SASL mechanism supported by server:\n"
-msgstr ""
+msgstr "Mata in namn på de SASL mekanismer som servern stöder:\n"
 
 #: src/gsasl.c:133
-#, fuzzy, c-format
+#, c-format
 msgid "Using mechanism:\n"
-msgstr "Okänd SASL mekanism"
+msgstr "Använder mekanism:\n"
 
 #: src/gsasl.c:150
 #, c-format
 msgid "Output from client:\n"
-msgstr ""
+msgstr "Utdata från klient:\n"
 
 #: src/gsasl.c:152
 #, c-format
 msgid "Output from server:\n"
-msgstr ""
+msgstr "Utdata från server:\n"
 
 #: src/gsasl.c:302 src/gsasl.c:347
-#, fuzzy, c-format
+#, c-format
 msgid "GSASL error (%d): %s\n"
-msgstr "Okänt fel i libgsasl"
+msgstr "GSASL fel (%d): %s\n"
 
 #: src/gsasl.c:353
 #, c-format
 msgid "This %s supports the following mechanisms:\n"
-msgstr ""
+msgstr "Den här %s stöder följande mekanismer:\n"
 
 #: src/gsasl.c:355 src/gsasl.c:428
 msgid "client"
-msgstr ""
+msgstr "klienten"
 
 #: src/gsasl.c:355 src/gsasl.c:428
 msgid "server"
-msgstr ""
+msgstr "servern"
 
 #: src/gsasl.c:379
 #, c-format
 msgid "Cannot find mechanism...\n"
-msgstr ""
+msgstr "Kan inte hitta mekanism...\n"
 
 #: src/gsasl.c:397 src/gsasl.c:437 src/gsasl.c:532
-#, fuzzy, c-format
+#, c-format
 msgid "Libgsasl error (%d): %s\n"
-msgstr "Okänt fel i libgsasl"
+msgstr "Libgsasl fel (%d): %s\n"
 
 #: src/gsasl.c:426
 #, c-format
 msgid "Enter base64 authentication data from %s (press RET if none):\n"
-msgstr ""
+msgstr "Mata in base64 autentiseringsdata från %s (finns inget data, tryck ENTER):\n"
 
 #: src/gsasl.c:448
 #, c-format
 msgid "Client authentication finished (server trusted)...\n"
-msgstr ""
+msgstr "Klientautentisering avslutat (server verifierad)...\n"
 
 #: src/gsasl.c:451
 #, c-format
 msgid "Server authentication finished (client trusted)...\n"
-msgstr ""
+msgstr "Serverautentisering avslutad (klient verifierad)...\n"
 
 #: src/gsasl.c:466
 #, c-format
 msgid "Enter application data (EOF to finish):\n"
-msgstr ""
+msgstr "Mata in applikationsdata (EOF för att avsluta):\n"
 
 #: src/gsasl.c:505
 #, c-format
 msgid "Base64 encoded application data to send:\n"
-msgstr ""
+msgstr "Base64-kodad applikationsdata att skicka:\n"
 
 #: src/gsasl.c:539
 #, c-format
 msgid "Session finished...\n"
-msgstr ""
-
-#, fuzzy
-#~ msgid "Password for authentication."
-#~ msgstr "Fel vid autentisering av användare"
-
-#, fuzzy
-#~ msgid "Libgsasl wants to use:\n"
-#~ msgstr "Libgsasl lyckades"
-
-#, fuzzy
-#~ msgid "GSSAPI error in SASL library"
-#~ msgstr "Fel från gcrypt i SASL-biblioteket"
+msgstr "Session avslutad...\n"
