--- a/po/sv.po
+++ b/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU gsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-04-16 00:49+0200\n"
+"POT-Creation-Date: 2004-04-16 01:08+0200\n"
 "PO-Revision-Date: 2004-04-16 01:06+0200\n"
 "Last-Translator: Simon Josefsson <simon@josefsson.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -65,12 +65,16 @@ msgstr "Kan inte hitta mekanism...\n"
 #: src/gsasl.c:433
 #, c-format
 msgid "Enter base64 authentication data from server (press RET if none):\n"
-msgstr "Mata in base64 autentiseringsdata från server (finns inget data, tryck ENTER):\n"
+msgstr ""
+"Mata in base64 autentiseringsdata från server (finns inget data, tryck "
+"ENTER):\n"
 
 #: src/gsasl.c:436
 #, c-format
 msgid "Enter base64 authentication data from client (press RET if none):\n"
-msgstr "Mata in base64 autentiseringsdata från klient (finns inget data, tryck ENTER):\n"
+msgstr ""
+"Mata in base64 autentiseringsdata från klient (finns inget data, tryck "
+"ENTER):\n"
 
 #: src/gsasl.c:458
 #, c-format
