--- a/lib/README
+++ b/lib/README
@@ -9,8 +9,8 @@ The GNU SASL library is licensed under the GNU Lesser General Public
 License (LGPL).  The GNU project typically uses the GNU General Public
 License (GPL) for libraries, and not the LGPL, but for this project we
 decided that we would get more help from the community if we used the
-LGPL.  The main reason for this is that other free implementations
-exists.  See also <http://www.gnu.org/licenses/why-not-lgpl.html>.
+LGPL, as other free SASL implementations exists.  See also
+<http://www.gnu.org/licenses/why-not-lgpl.html>.
 
 Currently there is some support for the following mechanisms:
 
